--- a/hack/kind_config.yaml
+++ b/hack/kind_config.yaml
@@ -5,3 +5,5 @@ nodes:
   image: kindest/node:v1.17.11
 - role: worker
   image: kindest/node:v1.17.11
+- role: worker
+  image: kindest/node:v1.17.11
